fixed body overlay being too short

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ button.gif-search:hover {
 }
 #body-overlay {
     width: 100%;
-    height: 100%;
+    height: 200%;
     background-color: rgba(0,0,0,0.6);
     z-index: 1;
     position: absolute;
